<resources>
    <string name="app_name">Cheers</string>
    <string name="play_button">Spielen</string>
    <string name="settings_button">Einstellungen</string>
    <string name="more_button">Einsenden</string>
    <string name="playerChooseHeadline">Spielerauswahl</string>
    <string name="settingsHeadline">Einstellungen</string>
    <string name="add_button">Hinzufügen</string>
    <string name="pleaseAddPlayers">Bitte füge Spieler hinzu.</string>
    <string name="noValidName">Verwende keine Prozentsymbole und bleibe bitte unter 25 Zeichen.</string>
    <string name="noValueEntered">Bitte füge erst etwas ein.</string>
    <string name="notEnoughPlayerWarning">Du brauchst mindestens 2 Spieler um ein Spiel starten zu können.</string>
    <string name="duplicatePlayersWarning">Bitte verwende keine Namen mehrfach!</string>
    <string name="serviceNot">Service nicht verfügbar.</string>

    <string name="warningDialogMessage">"Genießen Sie Alkohol verantwortungsvoll. Diese App haftet nicht für Folgeschäden durch Betrinken."</string>
    <string name="warningDialogTitle">Warnhinweis</string>
    <string name="warningDialogPositiveButton">Spielen</string>
    <string name="warningDialogNegativeButton">Schließen</string>

    <string name="warningConnectionDialogMessage">"Zum Spielen von Cheers wird beim ersten Start eine aktive Internetverbindung benötigt."</string>
    <string name="warningConnectionDialogTitle">Warnhinweis</string>
    <string name="warningConnectionDialogNegativeButton">Ok</string>

    <string name="endScreenTitle">Ende</string>
    <string name="endScreenMessage">Bravo! Ihr habt Cheers erfolgreich beendet. Wenn Ihr noch immer nicht genug vom Alkohol habt, dann drückt Restart!</string>
    <string name="endScreenButtonHome">HOME</string>
    <string name="endScreenButtonRestart">RESTART</string>

    <string name="settings_title_textsize_question">Aufgaben-Textgröße</string>
    <string name="settings_summary_textsize_question">Klicke, um die Textgröße für die Aufgaben zu verändern</string>
    <string name="settings_title_min_drinkAmount">Mindestschluck</string>
    <string name="settings_summary_min_drinkAmount">Klicke, um die Mindestschluckanzahl zu ändern.</string>
    <string name="settings_title_max_drinkAmount">Maximalschluck</string>
    <string name="settings_summary_max_drinkAmount">Klicke, um die Maximalschluckanzahl zu ändern.</string>
    <string name="settings_title_virusQuestions">Virusfragen</string>
    <string name="settings_summary_virusQuestions">Schalte die Virusfragen ein oder aus.</string>
    <string name="settings_title_gameQuestions">Spielfragen</string>
    <string name="settings_summary_gameQuestions">Schalte die Spielfragen ein oder aus.</string>

    <string name="submissionCategory">Kategorie:</string>
    <string name="submissionText">Text:</string>
    <string name="submissionButton">Send</string>
    <string name="submissionHeadline">Einsendung</string>
    <string name="backWarning">Press back again for quiting!</string>
    <string name="questionSent">Question was sent. Thank you!</string>
    <string name="drinkReminderNotificationChannelID">NotificationChannelDrinkReminder</string>
    <string name="settingsNotificationSummary">Schalte Erinnerungs-Benachrichtigungen ein oder aus und starte die App neu.</string>
    <string name="settingsNotificationTitle">Erinnerungen</string>
    <string name="virusShowHeader">"Virus|Dauer:"</string>
</resources>
