<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    >

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/endScreenTitle"
        android:textSize="50sp"
        android:textStyle="bold"
        android:paddingBottom="40dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/endScreenMessage"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textSize="20sp"
        android:textAlignment="center"/>

    <Button

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/endScreenButtonRestart"
        android:layout_marginTop="20dp"
        android:onClick="restartGame"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/endScreenButtonHome"
        android:layout_marginTop="20dp"
        android:onClick="homeButton"
       />

</LinearLayout>
