<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="at.technikum_wien.cheers.PlayerActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/playerChooseHeadline"
        android:textSize="48dp"
        android:layout_margin="10dp"
        android:textAlignment="center"/>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_margin="10dp"
        android:visibility="gone"
        android:scrollbars="vertical"
        android:background="#E9E9E9"
        android:id="@+id/players_rv">
    </android.support.v7.widget.RecyclerView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:textAlignment="center"
        android:gravity="center"
        android:visibility="visible"
        android:id="@+id/showInfo_tv"
        android:layout_margin="10dp"
        android:text="@string/pleaseAddPlayers"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">
        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/enterName_et"
        />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/play_add_button"
            android:paddingRight="8dp"
            android:text="@string/add_button"/>
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/play_play_button"
        android:text="@string/play_button"/>
</LinearLayout>
