<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackgroundAll"
    tools:context="at.technikum_wien.cheers.SubmissionActivtiy">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submissionHeadline"
        android:textSize="48dp"
        android:textColor="@color/colorText"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submissionCategory"
        android:textSize="24dp"
        android:textColor="@color/colorText"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="10dp"
        android:textAlignment="center"/>

    <Spinner
        android:id="@+id/submissionSpinner"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        android:textAlignment="center"
        android:backgroundTint="@color/colorText"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submissionText"
        android:textSize="24dp"
        android:textColor="@color/colorText"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="10dp"
        android:textAlignment="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:background="#76bca3"
            android:textSize="24dp"
            android:textColor="@color/colorText"
            android:gravity="top|left"
            android:padding="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="10"
            android:id="@+id/submissionEditText"/>

        <Button
            android:layout_width="200dp"
            android:layout_height="64dp"
            android:layout_margin="10dp"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/colorText"
            android:text="@string/submissionButton"
            android:id="@+id/submissionButton"/>
    </LinearLayout>

</LinearLayout>
